# google-calendar-mcp

./: .env.example  README.md  __init__.py  pyproject.toml  server.py
src/: __init__.py  events.py  freebusy.py
